syntax = "proto3";

package ozon.dev.mc2.api;

option go_package = "homework/pkg/api;api";

service Admin {
  rpc UserCreate(UserCreateRequest) returns (UserCreateResponse){}
  rpc UserList(UserListRequest) returns (UserListResponse){}
  rpc UserUpdate(UserUpdateRequest) returns (UserUpdateResponse){}
  rpc UserDelete(UserDeleteRequest) returns (UserDeleteResponse){}
}

//
//UserCreate
//

message UserCreateRequest{
  string name = 1;
  string password = 2;
}
message UserCreateResponse {}

//
//UserList
//

message UserListRequest{}
message UserListResponse{
  repeated User users = 1;
  message User {
    string name = 2;
  }
}

//
//userUpdate
//

message UserUpdateRequest{
  string name = 1;
  string password = 2;
}
message UserUpdateResponse{}

//
//userDelete
//

message UserDeleteRequest{
  string name = 1;
}
message UserDeleteResponse{}
